<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="homeTitle">Welcome to TIC TAC TOE</string>
    <string name="playButton">Play</string>

    <string name="playerSetupTitle">Enter Your Names</string>
    <string name="label1">Player 1</string>
    <string name="label2">Player 2</string>
    <string name="nameHint">Enter your Name</string>
    <string name="submitButton">Submit Names</string>

    <string name="homeButton">HOME</string>
    <string name="resetButton">RESET</string>
    <string name="scoreButton">SCORE</string>
    <string name="exitButton">EXIT</string>

</resources>